# nmr-fido

./: README.md  pyproject.toml
nmr-fido/: nmrdata.py
nmr-fido/src/nmr_fido/: nmrdata.py  pyproject.toml
nmr-fido/src/nmr_fido/core/: processing.py
nmr_fido/: __init__.py  nmrdata.py  utils.py
nmr_fido/core/: fileio.py  processing.py
nmr_fido/io/: fileio.py
nmr_fido/phasing_gui/: ToolbarButton.py  phasing_gui.py
nmr_fido/utils/: inject_processing.py  scales.py  unit_to_index.py
tests/: automatic_phasing.py  test.fid  test1d.fid  test_common_pipeline.py  test_ft.py  test_import.py  test_lp.py  test_nmrglue.py  test_processing.py  test_sol.py
utils/: inject_processing.py
